syntax = "proto3";

package group_eventpb;

option go_package = "internal/grpc;grpc";

message CourseCreatedEvent {
  string id = 1;
  string name = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
}

message GroupCreatedEvent {
  string id = 1;
  string course_id = 2;
  string name = 3;
  int64 expire_at = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message GroupMemberAddedEvent {
  string id = 1;
  string group_id = 2;
  string user_id = 3;
  string role = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CourseInstructorAssignedEvent {
  string id = 1;
  string course_id = 2;
  string user_id = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}
